--- a/realsense2_camera/package.xml
+++ b/realsense2_camera/package.xml
@@ -23,6 +23,7 @@
   <depend>std_msgs</depend>
   <depend>message_runtime</depend>
   <depend>tf</depend>
+  <depend>tf2_ros</depend>
   <depend>ddynamic_reconfigure</depend>
   <depend>diagnostic_updater</depend>
   <depend>librealsense2</depend>
